<resources>
    <string name="back">back</string>
    <string name="email">email</string>
    <string name="hallo">Hallo</string>
    <string name="login">Login</string>
    <string name="kirim">Kirim</string>
    <string name="setuju">Setuju</string>
    <string name="daftar">Daftar</string>
    <string name="google">Google</string>
    <string name="jbay">Jogja Bay</string>
    <string name="n_d">Nama Depan</string>
    <string name="menu_home">Home</string>
    <string name="monjali">Monjali</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="n_b">Nama Belakang</string>
    <string name="fp">Reset Password</string>
    <string name="facebook">facebook</string>
    <string name="rizky">Rizky Pratama</string>
    <string name="title">Visit Edupark </string>
    <string name="menu_gallery">Gallery</string>
    <string name="monjalipic">MonjaliPic</string>
    <string name="glzoo">Gembira Loka Zoo</string>
    <string name="tmpintar">Taman Pintar</string>
    <string name="tbbreksi">Tebing Breksi</string>
    <string name="welcome">Welcome Back! </string>
    <string name="_5170311050">5170311050</string>
    <string name="_5170311133">5170311133</string>
    <string name="_5170311151">5170311151</string>
    <string name="_5180311115">5180311115</string>
    <string name="_5180311124">5180311124</string>
    <string name="_5180311139">5180311139</string>
    <string name="home_second">Home Second</string>
    <string name="action_settings">Settings</string>
    <string name="silviana">Silviana Diah P</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ske">Sindu Kusuma Edupark</string>
    <string name="tidak_setuju">Tidak Setuju</string>
    <string name="app_name">Visit A Edupark </string>
    <string name="email_address">Email Address</string>
    <string name="nurul_hidayah">Nurul Hidayah</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="merapipark">The World Landmarks</string>
    <string name="masuk">Masuk Untuk Melanjutkan </string>
    <string name="el_zahra_aufi_s">El Zahra Aufi S</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="hayati_ramadhani">Hayati Ramadhani</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="belum_mendaftar">Belum Mendaftar? </string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="tvfp1">Masukan Email yang sudah terdaftar</string>
    <string name="jesicha_fajari_herdianto">Jesicha Fajari H</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="cari_tempat">Cari tempat menarik untuk dijelajahi</string>
    <string name="silahkan_login_terlebih_dahulu">Silahkan login terlebih dahulu</string>
    <string name="setuju_dengan_syarat_ketentuan"><![CDATA[Setuju dengan Syarat & Ketentuan]]></string>
    <string name="cari2">Aktifkan layanan lokasi untuk mempermudah mencari tempat edukasi di sekitar anda</string>
    <string name="skedesc">Sindu Kusuma Edupark (SKE) merupakan sebuah destinasi rekreasi yang terletak di Jogjakarta. Di tujuh hektar kawasan taman yang selesai dibangun tahun 2014 ini, terdapat bermacam-macam wahana, baik wahana bermain maupun wahana belajar yang bisa dinikmati oleh semua anggota keluarga.\n\nWahana yang paling terkenal dari SKE adalah bianglalanya, yang merupakan sebuah wahana bermain sekaligus ikon SKE sendiri. Bila Singapore memiliki Flyer setinggi 165 meter, sementara Malaysia punya Eye setinggi 88 meter, dan di Thailand ada Asiatique setinggi 60 meter, Indonesia memiliki Cakra Manggilingan dengan tinggi 48 meter. Di tingkat Asia Tenggara, bianglala ini memang mesti berpuas diri duduk di peringkat keenam sebagai bianglala tertinggi, tetapi di tingkat nasional, ia duduk di peringkat pertama.\n\nBerada di jantung Sindu Kusuma Edupark (SKE), Cakra yang terdiri dari 28 buah kapsul yang masing-masing dapat memuat empat orang termasuk ke dalam aspek bermain taman yang mengusung tagline The City of Fantasy, Wahana Wisata Keluarga itu. Daya tarik utama Cakra adalah persembahan bird eye view 360 derajat ketika kapsul yang kita tumpangi sudah berada di titik puncak.</string>
    <string name="monjalidesc">Kata orang kita harus menunggu hujan untuk bisa melihat pelangi, dan itu pun hanya di siang hari. Tapi di taman ini kita tak perlu menunggu hujan apalagi matahari, karena pelangi di sini akan terus ada setiap hari bahkan setelah mentari terbenam. Ya, pelangi ini memang bukan pelangi biasa karena diwujudkan dalam bentuk lampion. \n\nTaman Pelangi, begitulah nama untuk taman yang ada di pelataran Monumen Jogja Kembali ini. Didesain mengelilingi taman, bermacam bentuk dan warna lampion menghiasi pelataran. Ada dua sisi pintu masuk, barat dan timur. YogYES sarankan masuklah melalui pintu timur karena dari situ kita akan langsung disambut lampion besar berbentuk pelangi yang sekaligus menjadi pintu gerbang menuju negeri lampion. \n\nMemasuki taman, kita akan melewati sebuah rute yang dipenuhi lampion aneka bentuk dan warna mulai dari flora, fauna, tokoh-tokoh kartun Jepang dan Disney, bahkan wajah-wajah para pemimpin republik ini, yang juga terbuat dari lampion. Penataannya pun bervariasi, ada yang seperti ditanam di dalam tanah, menempel di dinding, bergantungan, atau berbaris seperti prajurit berjajar rapi. \n\nSambil menikmati malam yang penuh warna, kita juga bisa mencoba bemacam wahana mulai dari trampolin, becak mini, perahu dayung, bola air, speed boat, bom bom car, dan lain sebagainya. Dilihat dari atas, komplek Monumen Jogja Kembali ini tampak seperti mandala dengan 4 bagian kolam yang mengelilinginya. Nah, di kolam-kolam inilah kita bisa menikmati wahana air yang tersedia. Ingin yang lebih menegangkan? Masuk saja ke Puri Hantu. Entah apa di dalamnya karena kami tak cukup nyali untuk memasukinya. Bila malas berkeliling jalan kaki, tersedia juga kereta safari yang akan mengantar kita menjelajah seluruh rute hingga akhir. \n\nTaman Pelangi Monjali boleh dibilang tempat rekreasi yang cukup lengkap. Selain menawarkan romantisme malam bertabur lampion warna-warni dan bermacam wahana permainan, di sini juga ada food court yang bisa menjadi tempat melepas lelah sambil mengisi perut. Nah, bingung mau berwisata malam yang menyenangkan di Jogja? Ke Taman Pelangi saja.</string>
    <string name="skedetail"><![CDATA[Taman hiburan dengan wahana untuk edukasi anak & dewasa.]]></string>
    <string name="monjalidet">Taman hiburan dan edukasi di Yogyakarta</string>
    <string name="kbnbinatang">Kebun binatang di Yogyakarta</string>
    <string name="gzdesc">Kebun Binatang Gembira Loka adalah kebun binatang yang berada di Yogyakarta. Berisi berbagai macam spesies dari belahan dunia, seperti orangutan, gajah asia, simpanse, harimau, dan lain sebagainya. Kebun Binatang Gembira Loka menjadi daya tarik tersendiri bagi para wisatawan Yogyakarta. Gembira Loka Zoo sempat rusak parah akibat gempa bumi yang mengguncang kota Yogyakarta tahun 2006. Tetapi, setelah direnovasi Kebun Binatang Gembira Loka tetap dicari para wisatawan. \n\n Loka artinya tempat, gembira ya gembira. Syahdan, hampir setengah abad yang lalu Sri Sultan Hamengku Buwono IX mewujudkan keinginan pendahulunya untuk mengembangkan ‘Bonraja’ tempat memelihara satwa kelangenan raja menjadi suatu kebon binatang publik. Maka didirikanlah Gembira Loka di atas lahan seluas 20 ha yang separonya berupa hutan lindung. Disitu terdapat lebih dari 100 spesies satwa di antaranya 61 spesies flora.\n\nLetaknya di daerah aliran sungai Gajah Wong. Akses menuju Gembira Loka sangat mudah dengan angkutan kota dan kendaraan. Pada awalnya dimulai dari beberapa hewan macan tutul yang berhasil ditangkap penduduk setempat karena mengganggu desa dan sebagian berasal dari lereng merapi yang hutannya terbakar akibat awan panas.\n\nGembira Loka Zoo memiliki koleksi satwa yang cukup lengkap. Akhir-akhir ini, dikabarkan bahwa GLZ sedang mengadakan kesepakatan dengan Singapore Zoo untuk pertukaran hewan, yakni 6 ekor Pinguin Jackass. Gembira Loka Zoo selalu berusaha memberikan yang terbaik demi kenyamanan pengunjung serta kelestarian alam. Beberapa kali didengar bahwa gajah melahirkan, burung kakatua menetaskan telurnya, serta kuda pacu melahirkan anaknya.\n\nSatu hal yang memprihatinkan adalah banyak kondisi satwa yang kurang terurus. Banyak fasilitas yang seakan seadanya saja. Hal itu karena pendapatan dari tiket masuk sangat kecil dari sedikitnya wisatawan yang berkunjung.\n\nNamun, sejak tahun 2010 Gembira Loka Zoo mulai merehabilitasi dan merekonstruksi kebun binatangnya. Bahkan, sampai tahun 2012 ini sedang dalam proses pembuatan untuk \"Taman Burung\" dan sedangkan untuk \"Taman Reptil dan Amfibi\" sudah dalam tahap sentuhan akhir. Beberapa pedagang asongan pun sudah mulai dibenahi, agar terkesan rapi dan bersih. Semenjak itu, GLZ mulai dikunjungi pengunjung dengan jumlah yang lebih banyak.</string>
    <string name="jbdet">Taman rekreasi air di Yogyakarta</string>
</resources>