<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/backgroundlogmain"
    android:orientation="vertical"
    tools:context=".Login">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sfregular"
        android:gravity="center_horizontal"
        android:text="@string/masuk"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/title"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/sfregular"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/facebook"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/google"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/google"
        android:src="@drawable/google"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/email"
        app:layout_constraintStart_toEndOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/email"
        android:layout_width="50sp"
        android:background="@drawable/logo"
        android:layout_height="50sp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/email"
        android:src="@drawable/email"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/google" />

    <TextView
        android:id="@+id/register1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/sfregular"
        android:text="@string/belum_mendaftar"
        android:textColor="@color/blue"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register2"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.98"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/register2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/sfregular"
        android:text="@string/daftar"
        android:textColor="@color/pink"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/register1"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="292dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="google,email,imageView2"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>